rough draft- right before sending for feedback

--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -22,7 +22,7 @@
 \vfill
 
 Examiner 1: Prof. Dr. Thomas Magedanz
-\hfill\llap{Advisor: Hauke Buhr}\\ % and Marius???
+\hfill\llap{Advisor: Dr. Ing. Marius Corici}\\ % and Marius???
 Examiner 2: Prof. Dr. Axel Küpper
 
 \afterpage{\null\thispagestyle{empty}\newpage}
