--- a/thesis.tex
+++ b/thesis.tex
@@ -186,8 +186,8 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 \include{mainmatter/02_background}
 %\include{mainmatter/03_related_work}
 \include{mainmatter/04_approach}
-%\include{mainmatter/05_evaluation}
-%\include{mainmatter/06_conclusion}
+\include{mainmatter/05_evaluation}
+\include{mainmatter/06_conclusion}
 % Include more chapters as required.
 
 %%=========================================
