--- a/mainmatter/06_conclusion.tex
+++ b/mainmatter/06_conclusion.tex
@@ -4,35 +4,30 @@
 \chapter{Conclusion and Outlook}
 \label{cha:conclusion}
 
-This thesis has looked at the use of reinforcement learning to size tasks in scientific workflows. It has provided background information on scientific workflows, scientific workflow managers, the gradient bandit problem, and q-learning in chapter \ref{cha:background}. It has discussed related work in chapter \ref{cha:related_work} and then incorporated gradient bandits and q-learning into a popular workflow manager in chapter \ref{cha:approach}. The performance of this approach was then tested against that of the default configurations and that of a feedback-loop based approach. In the evaluation this thesis found that the results had vastly improved on the default configuration and performed similarly with the feedback loop approach for runtime performance whilst achieving greater CPU efficiency but worse memory efficiency.
+Looking back, this thesis has addresses the usage of multiple backhaul paths in a campus 5G setting to achieve determinism. A review of the topic and relevant literature was done in the background chapter, then an approach was developed based on that information and based on the requirements of the problem. Finally this approach was evaluated in a testbed with a link emulator to see how it performed.
 
-This rest of this chapter briefly looks at what could be improved upon in section \ref{sec:improvements} before section \ref{sec:implications} looks forwards and asks what implications this could have and what avenues might prove interesting for further research.
+TODO
 
 %%=========================================
 \section{Improvements}
 \label{sec:improvements}
 
-Immediately the most obvious way in which these approaches could be improved upon would be to incorporate read and write calls into the reward function. When a thread reads or writes characters from or to a device it must perform a system call and wait for it to complete, and during this time the thread cannot use the CPU. If a program has a high degree of parallel operations but also has to read and write lots of characters then it would probably have lower CPU usage (because of the system calls) but simultaneously would benefit from being assigned more CPUs. However because of the nature of the bandit and the agent’s reward functions it is unlikely that this task would be assigned more resources since read and write calls are not considered.
+There are several possible improvements that immediately spring to mind. Firstly, the path estimation could be adjusted to not just report previous statistics but also attempt to infer what the path might look like in the near future, for example as a path begins to experience increased latency a predictive algorithm/approach might be able to pre-emptively move flows off of that path, before their latency requirements are violated. This approach could be based on machine learning or AI, or it could use analytical methods.
 
-Moving along this train of thought, it could also be prudent to incorporate the size of a task’s input file into the reward function for the memory bandit or the q-learning agent. A task’s memory footprint is most likely quite closely coupled with the size of the input file and this could prove important information for a reinforcement learning agent.
+Additionally, specifically for the Lower Earth Orbit (LEO) satellite case, the path selection could potentially be adjusted to account for the periodic increases in latency as the current satellite leaves the range of the ground station, and the next one comes into range. For example during this phase it might make sense to temporarily forward packets on a different path.
 
-A different issue which was relevant to both approaches was the length of time needed to train the agents. The gradient bandit was trained for about 40 runs and the q-learning agent took 90 runs before they were “tested” across the next 10 runs. For large scale workflows this would take a considerable amount of time. Of course the agents are able to learn on the go and the performance during the training time is not so much worse as to make the workflows unusable during that time, so it is hard to say how much of a problem this could be.
+Another potential improvement would be to pass a "Time of Execution" field in the GTP header of packets of jitter-sensitive applications. This allows the receiving WAN connector to hold packets if they have arrived too early, and, conversely, the packet ordering function may use this field to determine that it is more important to forward the current packet now, than to wait for a missing packet.
 
-Specifically for the q-learning agent there is room for improvement by incorporating replay buffers and eligibility traces. These would enable the agent to update its value function for the states and actions which led it to its current state and this is could help to learn an optimal $Q$ function faster. This is not done in the current implementation and could have a significant impact on performance. Additionally an epsilon of $\epsilon = 1/t$ could be used to decrease the agent’s exploration proportional to the time. Additionally it may be more prudent to separate the memory assignments from the CPU assignments and instead co-locate a q-learning agent for CPU with one for memory. This is what was done for the gradient bandit and it would make sense for the q-learning agent too, the relationship between CPU and memory assignments can be split up as they are not hugely dependent on each other, and because it could then explore a larger state-action-space, and thus be trained faster or achieve better results by having more fine-grained allocation options.
+As the authors in \cite{adaptive} did, this thesis' approach could benefit from adaptive windows of reporting. This way there is not additional overhead with overly frequent statistical updates, as well as avoiding the reverse situation, where the reporting is too infrequent for a rapidly changing path.
 
-Finally, considering the testing set-up it would be an improvement to use kubernetes clusters with different machines to more accurately simulate the scenario where a workflow is performed on a larger distributed system with different nodes (with potentially heterogeneous resources). Such a set-up may also change results as the cumulative resources of the system would be greater, which may allows the agent’s decreased resource usage to increase throughput even more and thus speed up the workflows to a greater degree. It would also be better to use random inputs chosen from several different sets of possible inputs as opposed to repeating the workflows with the same input data. By training the agents using the same inputs there is a danger of overfitting the agents’ resource assignments. This may be less of a danger for the CPU assignments, because the character of a task’s CPU usage is less dependent on the size of the inputs, but repeatedly using the same inputs for an agent which sizes tasks for memory does present a real danger of overfitting. This is because the memory footprint of a task is much more dependent on the input to the task. This recommendation is not particularly relevant for those workflows which tend to have similarly sized inputs, but it could make a difference for workflows with different usage patterns.
+The last possible improvement is the addition of Forward Error Encoding (FEC). While this would be difficult to integrate into the equation to select paths, FEC could be used to increase the resilience of consistently lossy links, which is a big benefit for links which commonly exhibit this characteristic, such as wireless links.
 
 %%=========================================
 \section{Implications and Further Areas of Research}
 \label{sec:implications}
 
-The obvious implications of these findings are that, much like some of the scheduling problems mentioned in chapter \ref{cha:related_work}, this is also an area in which reinforcement learning has interesting potential. Additionally it has also shown that the resource configurations in scientific workflows have room for improvement and are another area which should be investigated further.
+Since the results were only verified in a testbed setup it would make sense to now test the WAN Connector in a real campus 5G deployment where there actually are multiple outgoing paths.
 
-Nextflow and other scientific workflow managers represent a different class of actor in the interactions between user, application and execution platform. These workflow managers do not manage the execution platform, nor do they create the workflows which are executed. They are a kind of middle man and thus present a unique perspective on user-executor interactions. Normally the interactions in such environments are just between the user and the execution platform. The user has control over what process it wants to perform and how many resources to ask for, while the execution platform has control over when and how to execute the process. However in the context of a scientific workflow and a workflow manager, the manager sits in between the user and the execution platform and has no control over the tasks that must be executed nor over the execution. It is only capable of scheduling and sizing the tasks. This position requires a slightly different approach to common problems such as scheduling and resource assignment but it also presents an interesting avenue to research novel approaches to these familiar problems.
+Research should also be conducted on evaluating the performance of specific applications performance. For example the quality of VoIP calls do not only depend on latency and jitter \cite{voip-measurement}, but rather how they interact together, and they have their own suites of evaluation criteria. Another specific application to consider has to be interactive video. Mission critical as well as control systems could also be pulled into the test suites for evaluation.
 
-Now of the resources most important to both the process being executed and the user, the disk space must rank as one of the most important. Although it was not covered in this thesis, sizing a task’s disk space is another area where intelligent resource management could prove useful. It could most likely be solved in a fashion similar to the approach used for memory and in fact it would be quite simple to co-locate a gradient bandit approach for disk space alongside the memory and CPU bandits. Incorporating this into a q-learning agent would be trickier since the agent already has to explore a large state-action space for just memory and CPU, and by adding disk space into this it could become a very long process to try and train such an agent. Ultimately it may prove better to have separate q-learning agents for the CPU and the memory/disk-space (since these two are more likely to be closely related).
-
-If one considers the current trends in machine learning and reinforcement learning agents then what could also be an interesting avenue for research would be to use deep reinforcement-learning \cite{deepQ}, which uses a deep neural network to learn a policy. This could allow for the kind of fine-grained memory assignments that made the feedback loop perform so well.
-
-Following up on this idea, one more interesting area for further research would be incorporating a machine learning approach into a scientific workflow management systems’ internal scheduler. Whilst the reinforcement learning agents used in this thesis had no knowledge of the other tasks and of their interdependencies in the workflow, a scheduler would have the full understanding of a workflow’s digraph and could perhaps improve performance to an even greater degree by intelligently choosing when to assign a task slightly more or less resources than usual, depending on which tasks must wait for the current one to complete. 
-
+This approach has been a deterministic one, that is the function used to select paths on which to forward is deterministic. It would be interesting to see what benefit AI and machine learning approaches may bring to this problem since they can act more dynamically, and perhaps learn the characteristics of a given link over time. Perhaps they can discover what the link exhibits right before total failure and thus perform pre-emptive path switching.
